--- a/MultiNode/compute.conf
+++ b/MultiNode/compute.conf
@@ -19,8 +19,8 @@ NOVNCPROXY_URL="http://$SERVICE_HOST:6080/vnc_auto.html"
 VNCSERVER_LISTEN=$HOST_IP
 VNCSERVER_PROXYCLIENT_ADDRESS=$VNCSERVER_LISTEN
 enable_plugin contrail https://github.com/zioc/contrail-devstack-plugin.git
-disable_service disco api-srv schema svc-mon control collector analytic-api query-engine dns named ui-webs ui-jobs
-enable_service vrouter
+#disable_service disco api-srv schema svc-mon control collector analytic-api query-engine dns named ui-webs ui-jobs
+#enable_service vrouter
 COMPUTE_HOST_IP=10.1.1.250
 INSTALL_PROFILE=COMPUTE
 #CONTRAIL_REPO=https://github.com/Juniper/contrail-vnc.git
